adding 4-qubit noise module

--- a/QSFL_baseline_moon.ipynb
+++ b/QSFL_baseline_moon.ipynb
@@ -273,7 +273,7 @@
     "    return [qml.expval(qml.PauliZ(wires=i)) for i in range(n_qubits)]\n",
     "\n",
     "@qml.qnode(dev)\n",
-    "def qnode_with_noise(inputs, weights):\n",
+    "def qnode_with_noise2(inputs, weights):\n",
     "\n",
     "    noise_prob = 0.0\n",
     "    cut_layer = 0\n",
@@ -320,7 +320,99 @@
     "print(\"Circuit visualization:\")\n",
     "dummy_inputs = np.array([0.5, 0.3]).reshape(-1, 2)  # 더미 입력값\n",
     "dummy_weights = np.random.random((n_layer, 12))  # 더미 가중치\n",
-    "print(qml.draw_mpl(qnode_with_noise, show_all_wires=True)(dummy_inputs, dummy_weights))"
+    "print(qml.draw_mpl(qnode_with_noise2, show_all_wires=True)(dummy_inputs, dummy_weights))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a5b7eea",
+   "metadata": {},
+   "source": [
+    "## 4 qubit module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ec0d385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_qubits = 4\n",
+    "dev = qml.device(\"default.mixed\", wires=n_qubits)\n",
+    "\n",
+    "def encoding_layer(inputs):\n",
+    "    qml.AngleEmbedding(inputs, wires=range(n_qubits))\n",
+    "\n",
+    "def entangle_layer(weights):\n",
+    "    # per layer\n",
+    "    for layer_param in weights:\n",
+    "        qml.Rot(*layer_param[0:3], wires=0)\n",
+    "        qml.Rot(*layer_param[3:6], wires=1)\n",
+    "        qml.CRot(*layer_param[6:9], wires=[0, 1])\n",
+    "        qml.CRot(*layer_param[9:12], wires=[1, 0])\n",
+    "\n",
+    "def quantum_channel(level, type, wire_num):\n",
+    "    if type == 'phase_damping':\n",
+    "        qml.PhaseDamping(level, wires=wire_num)\n",
+    "    elif type == 'amplitude_damping':\n",
+    "        qml.AmplitudeDamping(level, wires=wire_num)\n",
+    "\n",
+    "@qml.qnode(dev)\n",
+    "def qnode(inputs, weights):\n",
+    "    qml.AngleEmbedding(inputs, wires=range(n_qubits))\n",
+    "    entangle_layer(weights)\n",
+    "    return [qml.expval(qml.PauliZ(wires=i)) for i in range(n_qubits)]\n",
+    "\n",
+    "@qml.qnode(dev)\n",
+    "def qnode_with_noise4(inputs, weights):\n",
+    "\n",
+    "    noise_prob = 0.0\n",
+    "    cut_layer = 0\n",
+    "\n",
+    "    # define function inside a function to avoid global variables\n",
+    "    def encoding_layer_with_noise(inputs):\n",
+    "        qml.AngleEmbedding(inputs, wires=range(n_qubits))\n",
+    "        for i in range(n_qubits):\n",
+    "            quantum_channel(noise_prob, 'amplitude_damping', i)\n",
+    "            # Add noise to the encoding layer\n",
+    "\n",
+    "    def entangle_layer_with_noise(weights):\n",
+    "        # per layer\n",
+    "\n",
+    "        assert len(weights) > cut_layer, \"cut_layer must be less than the total number of layers\"\n",
+    "\n",
+    "        for i, layer_param in enumerate(weights):\n",
+    "            if (i < cut_layer): # client side, adding noise\n",
+    "                qml.Rot(*layer_param[0:3], wires=0)\n",
+    "                qml.PhaseDamping(noise_prob, wires=0)\n",
+    "                qml.Rot(*layer_param[3:6], wires=1)\n",
+    "                qml.PhaseDamping(noise_prob, wires=1)\n",
+    "                qml.CRot(*layer_param[6:9], wires=[0, 1])\n",
+    "                qml.PhaseDamping(noise_prob, wires=0)\n",
+    "                qml.PhaseDamping(noise_prob, wires=1)\n",
+    "                qml.CRot(*layer_param[9:12], wires=[1, 0])\n",
+    "                qml.PhaseDamping(noise_prob, wires=0)\n",
+    "                qml.PhaseDamping(noise_prob, wires=1)\n",
+    "            else: # server side, no noise\n",
+    "                qml.Rot(*layer_param[0:3], wires=0)\n",
+    "                qml.Rot(*layer_param[3:6], wires=1)\n",
+    "                qml.CRot(*layer_param[6:9], wires=[0, 1])\n",
+    "                qml.CRot(*layer_param[9:12], wires=[1, 0])\n",
+    "\n",
+    "    encoding_layer_with_noise(inputs)\n",
+    "    entangle_layer_with_noise(weights)\n",
+    "    return [qml.expval(qml.PauliZ(wires=i)) for i in range(n_qubits)]\n",
+    "\n",
+    "n_layer = 2\n",
+    "weight_shapes = {\"weights\": (n_layer, 12)}\n",
+    "qlayer = qml.qnn.TorchLayer(qnode, weight_shapes)\n",
+    "\n",
+    "# 예시회로 출력하기\n",
+    "print(\"Circuit visualization:\")\n",
+    "dummy_inputs = np.array([0.5, 0.3, 0.2, 0.1]).reshape(-1, 4)  # 더미 입력값\n",
+    "dummy_weights = np.random.random((n_layer, 12))  # 더미 가중치\n",
+    "print(qml.draw_mpl(qnode_with_noise4, show_all_wires=True)(dummy_inputs, dummy_weights))"
    ]
   },
   {
