added 4-qubit noise module 2

--- a/QSFL_baseline_moon.ipynb
+++ b/QSFL_baseline_moon.ipynb
@@ -388,30 +388,45 @@
     "                qml.PhaseDamping(noise_prob, wires=0)\n",
     "                qml.Rot(*layer_param[3:6], wires=1)\n",
     "                qml.PhaseDamping(noise_prob, wires=1)\n",
-    "                qml.CRot(*layer_param[6:9], wires=[0, 1])\n",
+    "                qml.Rot(*layer_param[6:9], wires=2)\n",
+    "                qml.PhaseDamping(noise_prob, wires=2)\n",
+    "                qml.Rot(*layer_param[9:12], wires=3)\n",
+    "                qml.PhaseDamping(noise_prob, wires=3)\n",
+    "\n",
+    "                qml.CRot(*layer_param[12:15], wires=[0, 1])\n",
     "                qml.PhaseDamping(noise_prob, wires=0)\n",
     "                qml.PhaseDamping(noise_prob, wires=1)\n",
-    "                qml.CRot(*layer_param[9:12], wires=[1, 0])\n",
-    "                qml.PhaseDamping(noise_prob, wires=0)\n",
+    "                qml.CRot(*layer_param[15:18], wires=[1, 2])\n",
     "                qml.PhaseDamping(noise_prob, wires=1)\n",
+    "                qml.PhaseDamping(noise_prob, wires=2)\n",
+    "                qml.CRot(*layer_param[18:21], wires=[2, 3])\n",
+    "                qml.PhaseDamping(noise_prob, wires=2)\n",
+    "                qml.PhaseDamping(noise_prob, wires=3)\n",
+    "                qml.CRot(*layer_param[21:24], wires=[3, 0])\n",
+    "                qml.PhaseDamping(noise_prob, wires=3)\n",
+    "                qml.PhaseDamping(noise_prob, wires=0)\n",
     "            else: # server side, no noise\n",
     "                qml.Rot(*layer_param[0:3], wires=0)\n",
     "                qml.Rot(*layer_param[3:6], wires=1)\n",
-    "                qml.CRot(*layer_param[6:9], wires=[0, 1])\n",
-    "                qml.CRot(*layer_param[9:12], wires=[1, 0])\n",
+    "                qml.Rot(*layer_param[6:9], wires=2)\n",
+    "                qml.Rot(*layer_param[9:12], wires=3)\n",
+    "                qml.CRot(*layer_param[12:15], wires=[0, 1])\n",
+    "                qml.CRot(*layer_param[15:18], wires=[1, 2])\n",
+    "                qml.CRot(*layer_param[18:21], wires=[2, 3])\n",
+    "                qml.CRot(*layer_param[21:24], wires=[3, 0])\n",
     "\n",
     "    encoding_layer_with_noise(inputs)\n",
     "    entangle_layer_with_noise(weights)\n",
     "    return [qml.expval(qml.PauliZ(wires=i)) for i in range(n_qubits)]\n",
     "\n",
     "n_layer = 2\n",
-    "weight_shapes = {\"weights\": (n_layer, 12)}\n",
+    "weight_shapes = {\"weights\": (n_layer, 24)}\n",
     "qlayer = qml.qnn.TorchLayer(qnode, weight_shapes)\n",
     "\n",
     "# 예시회로 출력하기\n",
     "print(\"Circuit visualization:\")\n",
     "dummy_inputs = np.array([0.5, 0.3, 0.2, 0.1]).reshape(-1, 4)  # 더미 입력값\n",
-    "dummy_weights = np.random.random((n_layer, 12))  # 더미 가중치\n",
+    "dummy_weights = np.random.random((n_layer, 24))  # 더미 가중치\n",
     "print(qml.draw_mpl(qnode_with_noise4, show_all_wires=True)(dummy_inputs, dummy_weights))"
    ]
   },
